fixed tracing and moving traces to their correct parent in many places